--- a/templates/base.html
+++ b/templates/base.html
@@ -1,23 +1,27 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>{% block title %}Catálogo{% endblock %}</title>
-  <link rel="stylesheet" href="/static/styles.css">
+  <title>{% block title %}Fuego de Atenea{% endblock %}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="{% static 'css/styles.css' %}" rel="stylesheet">
 </head>
 <body>
-  <header class="topbar">
+  <div class="topbar">
     <div class="wrap">
-      <strong>Catálogo de Celulares</strong>
+      <div><strong>Fuego de Atenea</strong></div>
       <nav>
-        <a href="{% url 'home' %}">Inicio</a>
-        <a href="{% url 'celulares' %}">Celulares</a>
-        <a href="{% url 'celular_nuevo' %}">Cargar nuevo</a>
+        <a href="{% url 'sahumerios_lista' %}">Sahumerios</a>
+        <a href="/admin/">Admin</a>
       </nav>
     </div>
-  </header>
-  <main class="wrap">
+  </div>
+
+  <div class="wrap">
     {% block content %}{% endblock %}
-  </main>
+  </div>
+
+  <script src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
